# Fractals

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
Fractals/: CMakeLists.txt  main.cpp
Fractals/Application/: FracralsApplication.cpp  FracralsApplication.h  FractalsApplication.cpp  FractalsApplication.h  IApp.h  Win32App.cpp  Win32App.h
Fractals/Data/: DataBinder.h  DataProvider.h  RenderConfig.h
Fractals/Graphics/: FractalsRender.cpp  FractalsRender.h  MandelbrotCPURender.cpp  MandelbrotCPURender.h  MandelbrotGPURender.cpp  MandelbrotGPURender.h  Palette.h  Shader.cpp  Shader.h
Fractals/Graphics/Shader/: Uniform.h
Fractals/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h
Fractals/Math/: vec.h
Fractals/Resources/: fractalFrag.glsl.inl  fractalVert.glsl.inl  mandelbrot.glsl.inl
Fractals/UI/: IWindow.h  ToolsUI.cpp  ToolsUI.h  WinWindow.cpp  WinWindow.h
